# rust-matcher

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md
crates/sr-api/: Cargo.toml
crates/sr-api/src/: auth.rs  error.rs  lib.rs  main.rs  security.rs
crates/sr-api/src/handlers/: candidates.rs  conversion.rs  feedback.rs  health.rs  interactions.rs  matches.rs  mod.rs  pagination.rs  queue.rs  security.rs
crates/sr-api/tests/: readyz.rs  router_smoke.rs  security_compliance.rs
crates/sr-common/: Cargo.toml
crates/sr-common/src/: lib.rs  logging.rs  normalize.rs  run_id.rs  schema.rs  skill_normalizer.rs  timezone.rs
crates/sr-common/src/api/: conversion.rs  feedback_request.rs  feedback_response.rs  interaction_event.rs  match_request.rs  match_response.rs  mod.rs  queue_dashboard.rs  queue_job.rs
crates/sr-common/src/api/models/: queue.rs
crates/sr-common/src/corrections/: contract_type.rs  english_skill.rs  flow_depth.rs  japanese_skill.rs  mod.rs  nationality.rs  station.rs  tech_kubun.rs  todofuken.rs
crates/sr-common/src/date/: mod.rs  precision.rs  received_at.rs  start_date.rs
crates/sr-common/src/db/: anken_emails.rs  candidates.rs  conversion.rs  extraction_queue.rs  feedback.rs  feedback_history.rs  interaction_events.rs  interaction_logs.rs  match_results.rs  migrations.rs  mod.rs  pool.rs  queue_dashboard.rs  util.rs
crates/sr-common/src/extraction/: mod.rs
crates/sr-common/src/matching/: ko_checks.rs  ko_unified.rs  location.rs  mod.rs  pipeline.rs  prefilter.rs  scoring.rs  skills.rs  weights.rs
crates/sr-common/src/queue/: extraction_queue.rs  mod.rs
crates/sr-common/src/two_tower/: candle_tower.rs  config.rs  embedding.rs  hash_tower.rs  mod.rs  onnx_tower.rs  similarity.rs  tokenizer.rs
crates/sr-extractor/: Cargo.toml
crates/sr-extractor/src/: main.rs
crates/sr-gmail-ingestor/: Cargo.toml
crates/sr-gmail-ingestor/src/: main.rs
crates/sr-llm-worker/: Cargo.toml
crates/sr-llm-worker/src/: main.rs
crates/sr-metrics/: Cargo.toml
crates/sr-metrics/src/: lib.rs
crates/sr-queue-recovery/: Cargo.toml
crates/sr-queue-recovery/src/: main.rs
deploy/: sr-extractor.service  sr-extractor.timer  sr-llm-worker.service  sr-pg-maintenance.service  sr-pg-maintenance.timer  sr-queue-recovery.service  sr-queue-recovery.timer
docs/: MVP_PLAN.md  SPONTO_SYNC_CHECKLIST.md  TwoTower_SalesFBアルゴ概観.md  gmail-setup.md  logging.md  openapi.md  openapi.yaml  postgres_maintenance.md
gui/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
gui/public/: manifest.webmanifest  sw.js
gui/scripts/: test-runner.js
gui/src/: App.tsx  index.css  main.tsx  pwa.ts  router.tsx
gui/src/api/: client.ts  index.ts  queryClient.ts  types.ts
gui/src/api/hooks/: index.ts  useCandidates.ts  useConversion.ts  useProjects.ts  useQueue.ts  useTalentDetail.ts  useTalents.ts
gui/src/components/: Breadcrumbs.tsx  ErrorBoundary.tsx  ErrorDisplay.tsx  LoadingState.test.tsx  LoadingState.tsx  QueueRouteGuard.tsx  StatusBadge.tsx
gui/src/components/common/: InteractionActionButton.tsx  InteractionBadge.tsx
gui/src/components/projects/: ProjectCard.tsx  TalentMatchCard.tsx  formatBudgetRange.ts
gui/src/layouts/: RootLayout.test.tsx  RootLayout.tsx
gui/src/lib/: auth.ts  i18n.tsx  messages.ts
gui/src/pages/: Breadcrumbs.test.tsx  CandidatesPage.tsx  JobDetailPage.tsx  QueueDashboardPage.tsx  QueueJobsPage.tsx  TalentDetailPage.tsx  TalentsPage.tsx
gui/src/pages/projects/: ProjectDetailPage.tsx  ProjectsIndexPage.tsx  ProjectsList.tsx  ProjectsListPage.tsx
gui/src/theme/: component-theme.ts
patches/yup-oauth2/: .cargo_vcs_info.json  Cargo.toml
patches/yup-oauth2/src/: lib.rs  service_account.rs
scripts/: import_talents.py  import_talents_enum.py  pg_maintenance.sh
src/: lib.rs  schema.rs
src/calculation/: mod.rs  tanka_params.rs
src/corrections/: flow_depth.rs  mod.rs  remote_onsite.rs
src/date/: mod.rs  received_at.rs
src/matching/: ko_unified.rs  location.rs  mod.rs  skills.rs  weights.rs
src/queue/: extraction_queue.rs  mod.rs
