[workspace]
members = [
    "crates/sr-common",
    "crates/sr-extractor",
    "crates/sr-llm-worker",
    "crates/sr-queue-recovery",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = []
license = ""
publish = false

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
deadpool-postgres = { version = "0.14", features = ["rt_tokio_1"] }
dotenvy = "0.15"
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
