[package]
name = "sr-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
sr-common = { path = "../sr-common" }
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
governor.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
clap.workspace = true
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
jsonwebtoken.workspace = true

[dev-dependencies]
http-body-util = "0.1"
