[package]
name = "sr-common"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
chrono.workspace = true
lazy_static = "1"
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
once_cell.workspace = true
sha2.workspace = true
tokio-postgres.workspace = true
deadpool-postgres.workspace = true
tracing.workspace = true
unicode-normalization = "0.1"
strsim = "0.10"
ulid = "1"
siphasher.workspace = true

[dev-dependencies]
serial_test.workspace = true
