[package]
name = "sr-llm-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
chrono.workspace = true
clap.workspace = true
dotenvy.workspace = true
serde_json.workspace = true
sr-common = { path = "../sr-common" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
metrics.workspace = true
sr-metrics = { path = "../sr-metrics" }

[dev-dependencies]
mockito = "1"
serial_test.workspace = true
