[package]
name = "sr-queue-recovery"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
chrono.workspace = true
clap.workspace = true
dotenvy.workspace = true
sr-common = { path = "../sr-common" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
